<resources>
    <string name="app_name">Android</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to API -->
    <string name="register_url">http://10.0.2.2:3000/auth/register</string>
    <string name="login_url">http://10.0.2.2:3000/auth/login</string>
    <string name="get_data_url">http://10.0.2.2:3000/data/</string>
    <string name="get_data_date_url">http://10.0.2.2:3000/data/search/</string>
    <string name="post_rat_data_url">http://10.0.2.2:3000/data/add</string>
    <string name="title_activity_maps">Map</string>

    <string name="main_screen">Main Screen</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="zip">Zip</string>
    <string name="location_type">Location Type</string>
    <string name="city">City</string>
    <string name="borough">Borough</string>
    <string name="latitude_longitude">Latitude / Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="view_graph">View Graph</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="report_a_rat">Report a Rat</string>
    <string name="map">MAP</string>
    <string name="graph">Graph</string>
    <string name="search_report">Search Report</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_zip">Enter ZIP</string>
    <string name="welcome">Welcome!</string>
    <string name="report_date">Report Date</string>
    <string name="message">Message</string>

    <string name="dvh_message">CLICK FOR MORE INFO...</string>
</resources>
